tests/snapshots/yaml_suite_snapshots__yaml_suite_8XDJ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Comment in plain multiline value
  from: "https://gist.github.com/anonymous/deeb1ace28d5bf21fb56d80c13e2dc69 via @ingydotnet"
  tags: error comment scalar
  fail: true
  yaml: "key: word1\n#  xxx\n  word2\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :word1\n"
