tests/snapshots/yaml_suite_snapshots__yaml_suite_8XDJ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "https://gist.github.com/anonymous/deeb1ace28d5bf21fb56d80c13e2dc69 via @ingydotnet"
  name: Comment in plain multiline value
  tags: error comment scalar
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :word1\n"
  yaml: "key: word1\n#  xxx\n  word2\n"
