tests/snapshots/yaml_suite_snapshots__yaml_suite_93JH_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Block Mappings in Block Sequence
  from: NimYAML tests
  tags: mapping sequence
  yaml: " - key: value\n   key2: value2\n -\n   key3: value3\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    =VAL :key\n    =VAL :value\n    =VAL :key2\n    =VAL :value2\n   -MAP\n   +MAP\n    =VAL :key3\n    =VAL :value3\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"key\": \"value\",\n    \"key2\": \"value2\"\n  },\n  {\n    \"key3\": \"value3\"\n  }\n]\n"
  dump: "- key: value\n  key2: value2\n- key3: value3\n"
